tests/rosetta/out/C/bitmap-write-a-ppm-file.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:46Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:45Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct colour_t colour_t;
typedef struct bitmap_t bitmap_t;

typedef struct colour_t {
  int R;
  int G;
  int B;
} colour_t;
typedef struct {
  int len;
  colour_t *data;
} colour_list_t;
colour_list_t create_colour_list(int len) {
  colour_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(colour_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct bitmap_t {
  int width;
  int height;
  list_int pixels;
} bitmap_t;
typedef struct {
  int len;
  bitmap_t *data;
} bitmap_list_t;
bitmap_list_t create_bitmap_list(int len) {
  bitmap_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(bitmap_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

bitmap_t newBitmap(int w, int h, colour_t *c) {
  int y = 0;
  while (y < h) {
    colour_list_t row = {0, NULL};
    int x = 0;
    while (x < w) {
      colour_list_t tmp1 = create_colour_list(row.len + 1);
      for (int i2 = 0; i2 < row.len; i2++) {
        tmp1.data[i2] = row.data[i2];
      }
      tmp1.data[row.len] = c;
      tmp1.len = row.len + 1;
      row = tmp1;
      x = x + 1;
    }
    rows = 0;
    y = y + 1;
  }
  return (bitmap_t){.width = w, .height = h, .pixels = rows};
}

int setPixel(bitmap_t *b, int x, int y, colour_t *c) {
  int rows = b->pixels;
  colour_list_t row = rows.data[y];
  row.data[x] = c;
  rows.data[y] = row;
  b->pixels = rows;
}

int fillRect(bitmap_t *b, int x, int y, int w, int h, colour_t *c) {
  int yy = y;
  while (yy < y + h) {
    int xx = x;
    while (xx < x + w) {
      setPixel(&b, xx, yy, &c);
      xx = xx + 1;
    }
    yy = yy + 1;
  }
}

char *pad(int n, int width) {
  char *tmp3 = _str(n);
  char *s = tmp3;
  while (strlen(s) < width) {
    char *tmp4 = concat_string(" ", s);
    s = tmp4;
  }
  return s;
}

char *writePPMP3(bitmap_t *b) {
  int maxv = 0;
  int y = 0;
  while (y < b->height) {
    int x = 0;
    while (x < b->width) {
      colour_t p = b->pixels.data[y].data[x];
      if (p.r > maxv) {
        maxv = p.r;
      }
      if (p.g > maxv) {
        maxv = p.g;
      }
      if (p.b > maxv) {
        maxv = p.b;
      }
      x = x + 1;
    }
    y = y + 1;
  }
  char *tmp5 = _str(b->width);
  char *tmp6 = concat_string("P3\n# generated from Bitmap.writeppmp3\n", tmp5);
  char *tmp7 = concat_string(tmp6, " ");
  char *tmp8 = _str(b->height);
  char *tmp9 = concat_string(tmp7, tmp8);
  char *tmp10 = concat_string(tmp9, "\n");
  char *tmp11 = _str(maxv);
  char *tmp12 = concat_string(tmp10, tmp11);
  char *tmp13 = concat_string(tmp12, "\n");
  char *out = tmp13;
  char *tmp14 = _str(maxv);
  int numsize = strlen(tmp14);
  y = b->height - 1;
  while (y >= 0) {
    char *line = "";
    int x = 0;
    while (x < b->width) {
      colour_t p = b->pixels.data[y].data[x];
      char *tmp15 = concat_string(line, "   ");
      line = tmp15 + pad(p.r, numsize) + " " + pad(p.g, numsize) + " " +
             pad(p.b, numsize);
      x = x + 1;
    }
    char *tmp16 = concat_string(out, line);
    out = tmp16;
    if (y > 0) {
      char *tmp17 = concat_string(out, "\n");
      out = tmp17;
    } else {
      char *tmp18 = concat_string(out, "\n");
      out = tmp18;
    }
    y = y - 1;
  }
  return out;
}

int mochi_main() {
  colour_t black = (colour_t){.r = 0, .g = 0, .b = 0};
  colour_t white = (colour_t){.r = 255, .g = 255, .b = 255};
  bitmap_t bm = newBitmap(4, 4, &black);
  fillRect(&bm, 1, 0, 1, 2, &white);
  setPixel(&bm, 3, 3, &(colour_t){.r = 127, .g = 0, .b = 63});
  char *ppm = writePPMP3(&bm);
  printf("%s\n", ppm);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
